# boosterweb

./: .gitignore  Procfile  README.md  program_import.py  program_import.sh  requirements.txt  static.json  vimeo_video_upload.py
.github/workflows/: build-program.yml  main.yml
config/: nginx.conf.erb
config/_default/: config.toml  menus.yaml  nginx.conf.erb  params.toml
content/: program.md  talks.md
content/info/: about.md  become-a-partner.md  become_a_partner.md  cfp.md  coc.md  kids.md  monetary-policy.md  partners.md  tickets.md
content/partners/: index.md
content/posts/: my-first-post.md
content/program/: _index.md  index.md  speaker-presentation.md
content/retro/: index.md
content/speaker/: _index.md
content/splash/: index.md
content/talk/: 1-make-yourself-at-home-on-impostor-syndrome-and-psychological-safety.md  100-når-designsprints-feiler-hva-gjør-vi-da.md  101-analyser-forbruket-ditt-med-bankens-api.md  102-fra-dårlig-kommunikasjon-til-tillit-og-skaperglede.md  104-a-cultural-history-of-winamp.md  106-hot-loaf-of-bread-with-machine-learning.md  107-getting-grid-y-with-it.md  108-en-suksesshistorie-fra-vipps-når-alle-tar-ansvar-for-ux.md  108-hvordan-bli-en-bærekraftig-konferansedeltaker-på.md  109-hva-kan-innovasjon-lære-av-evolusjonen.md  11-expand-your-horizons-and-learn-to-make-games-on-a-commodore.md  (+144 more)
layouts/: index.html
program_import/: Cargo.toml  README.md
program_import/src/: app.rs  constants.rs  domain.rs  files.rs  main.rs  presentation.rs  sessionize.rs  utils.rs
program_import/test_fixtures/: All.json  GridSmart.json
(+2065 files in other folders)
